--- a/Udacity_TF_assignment2.ipynb
+++ b/Udacity_TF_assignment2.ipynb
@@ -345,6 +345,8 @@
     "  weights = tf.Variable(\n",
     "    tf.truncated_normal([image_size * image_size, node]))\n",
     "  biases = tf.Variable(tf.zeros([node]))\n",
+    "  \n",
+    " #### add a hidden layer\n",
     "  weights1 = tf.Variable(\n",
     "    tf.truncated_normal([node,num_labels]))\n",
     "  biases1 = tf.Variable(tf.zeros([num_labels]))  \n",
